# easy-transformer

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CLAUDE_DETAILED_PLAN.md  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-mkdocs.txt  requirements.txt  setup.py  sitemap.xml
advanced/multimodal/: index.html
advanced/optimization/: index.html
appendix/glossary/: index.html
appendix/resources/: index.html
docs/: index.md
docs/advanced/: multimodal.md  optimization.md
docs/appendix/: glossary.md  resources.md
docs/exercises/: part1-exercises.md  part2-exercises.md  part3-exercises.md  part4-exercises.md  part5-exercises.md
docs/part1/: math-basics.md  pytorch-basics.md  similarities.md  why-transformer.md
docs/part2/: attention-intuition.md  layers-and-deep-learning.md  positional-encoding.md  tokenization.md
docs/part3/: encoder-decoder.md  feed-forward.md  multi-head-attention.md  residual-normalization.md
docs/part4/: component-implementation.md  debugging-visualization.md  minimal-transformer.md  validation.md
docs/part5/: gpt-architecture.md  inference-techniques.md  pretraining-finetuning.md  tokenizer-details.md
examples/: train_simple_transformer.py
exercises/part1-exercises/: index.html
exercises/part2-exercises/: index.html
exercises/part3-exercises/: index.html
exercises/part4-exercises/: index.html
exercises/part5-exercises/: index.html
part1/math-basics/: index.html
part1/pytorch-basics/: index.html
part1/similarities/: index.html
part1/why-transformer/: index.html
part2/attention-intuition/: index.html
part2/layers-and-deep-learning/: index.html
part2/positional-encoding/: index.html
part2/tokenization/: index.html
part3/encoder-decoder/: index.html
part3/feed-forward/: index.html
part3/multi-head-attention/: index.html
part3/residual-normalization/: index.html
part4/component-implementation/: index.html
part4/debugging-visualization/: index.html
part4/minimal-transformer/: index.html
part4/validation/: index.html
part5/gpt-architecture/: index.html
part5/inference-techniques/: index.html
part5/pretraining-finetuning/: index.html
part5/tokenizer-details/: index.html
scripts/: build.sh  setup.sh  test.sh
search/: search_index.json
src/: __init__.py
src/easy_transformer/: __init__.py  cli.py
src/easy_transformer/models/: __init__.py
src/easy_transformer/utils/: __init__.py
tests/: __init__.py  conftest.py
